# Nodefy_Agent

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  package.json  tauri.conf.json
.github/workflows/: build.yml  release.yml  tauri-build.yml  tauri-test.yml  test.yml
assets/: assets.go
capabilities/: default.json
cmd/agent/: main.go
icons/: icon.icns
internal/bridge/: client.go  events.go  handlers.go
internal/config/: config.go
internal/dialog/: dialog.go  dialog_stub.go
internal/files/: files.go
internal/httputil/: response.go
internal/logging/: dialog_other.go  dialog_windows.go  logging.go
internal/server/: local.go
internal/tray/: tray.go  tray_stub.go
internal/watcher/: watcher.go
internal/websocket/: client.go
src/: config.rs  events.rs  lib.rs  main.rs  state.rs
src/commands/: bridge.rs  config.rs  files.rs  mod.rs  watcher.rs
src/services/: bridge.rs  mod.rs  watcher.rs
test/helpers/: helpers.go  setup.go
test/unit/bridge/: bridge_suite_test.go  client_test.go  events_test.go  handlers_test.go
test/unit/files/: files_suite_test.go  files_test.go
tests/: config_test.rs  events_test.rs  watcher_test.rs
