[package]
name = "nodefy-agent"
version = "0.2.0"
edition = "2021"

[lib]
name = "nodefy_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nodefy-agent"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
futures-util = "0.3"
notify = { version = "6", features = ["serde"] }
notify-debouncer-mini = "0.4"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
